# sa2-Android

./: Makefile  README.md  config.mk  graphics.mk  ldscript.txt  nonmatch_files.txt  sa1_Makefile  sa1_config.mk  sa1_ldscript.txt  sa1_sym_iwram.txt  sa2_ldscript.txt
.github/workflows/: build.yml
android/: gradle.properties  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  sa2_android_main.c  test_main.c
android/gradle/wrapper/: gradle-wrapper.properties
asm/non_matching/engine/: TransformSprite.inc  UnusedTransform.inc  sa2__sub_80039E4.inc  sa2__sub_8004010.inc  sa2__sub_8004E14.inc  sa2__unused_sub_8005C54.inc  sa2__unused_sub_8005FB4.inc  sa2__unused_sub_800672C.inc
chao_garden/include/: global.h
data/sa1/: data1.s  data_0_3_2.s  data_0_4.s  data_0_6_1.s  obj_gfx.s
graphics/sa1/tilemaps/egg_rocket_clouds/: header.c
graphics/sa1/tilemaps/ice_paradise_snow/: header.c
graphics/sa1/tilemaps/intro_created_by_sonic_team/: header.c
graphics/sa1/tilemaps/intro_presented_by_sega/: header.c
graphics/sa1/tilemaps/mp_choose_pak_type_en/: header.c
graphics/sa1/tilemaps/mp_choose_pak_type_jp/: header.c
graphics/sa1/tilemaps/mp_connection_error/: header.c
graphics/sa1/tilemaps/mp_connection_success/: header.c
graphics/sa1/tilemaps/mp_continue_screen/: header.c
graphics/sa1/tilemaps/mp_multipak_player_overview/: header.c
graphics/sa1/tilemaps/mp_singlepak_program_is_being_sent/: header.c
graphics/sa1/tilemaps/mp_team_play_screen/: header.c
graphics/sa1/tilemaps/mp_vs_background/: header.c
graphics/sa1/tilemaps/special_stage/: header.c
graphics/sa1/tilemaps/tilemap_73/: header.c
graphics/sa1/tilemaps/tilemap_74/: header.c
graphics/sa1/tilemaps/tilemap_75/: header.c
include/: core.h  sprite.h  tilemap.h
include/constants/: anim_sizes.h  animations.h  zones.h
include/constants/sa1/: animations.h  songs.h
include/constants/sa2/: animations.h  songs.h
include/game/: globals.h
include/game/parameters/: characters.h
include/game/sa1/stage/: stage_ui.h
include/gba/: defines.h
multi_boot/roms/collect_rings/: .gitignore  Makefile  ldscript.txt
sa1/: Makefile  ldscript.txt  sym_iwram.txt
sa1/include/: core.h  sprite.h
sa1/include/game/: globals.h
sa1/scripts/: extract_credits_data.py
sa1/src/: background.c
sa1/src/game/: character_select.c  collect_chaos_emeralds_msg.c  course_select.c  edit_language_screen.c  extra_stage_results.c  game.c  game_2_3.c  game_over.c  globals.c  intro_animation.c  options_menu.c  player_data_menu.c  player_name_input_menu.c  sound_test.c  staff_credits.c  time_attack_record.c  time_over.c  title_screen.c  vs_record.c
scripts/: progress.py
scripts/sound/: match_samples.py  match_waves.py
sound/: direct_sound_data.inc  programmable_wave_data.inc  voice_groups.inc
sound/sa1/: direct_sound_data.inc  programmable_wave_data.inc
sound/sa2/: direct_sound_data.inc  programmable_wave_data.inc
sound/songs/: se_291.s
src/: background.c  core.c  sprite.c
src/data/sa1/: obj_palettes.c  sprite_tables.c
src/game/: character_select.c  countdown.c  course_select.c  decomp_credits.c  game_over.c  globals.c  math.c  multiplayer_lobby.c  options_screen.c  race_progress.c  sound_test.c  title_screen.c
src/game/bosses/: boss_2.c  boss_4.c
src/game/cutscenes/: credits.c  credits_end.c  credits_slides.c  endings.c  extra_ending_fall.c  extra_ending_slides.c  final_ending_fall.c  final_ending_land.c  level_endings.c  missing_emeralds.c
src/game/enemies/: mon.c  yado.c
src/game/interactables_2/: collect_rings_lap_trigger.c
src/game/multiboot/: connection.c
src/game/multiplayer/: communication_outcome.c  indicators.c  mode_select.c  mp_player.c  multipak_connection.c  multiplayer_event_mgr.c  results.c  team_play.c
src/game/sa1/: save.c
src/game/sa1_sa2_shared/: collision.c  demo_manager.c  itembox.c  pause_menu.c  unused_level_select.c
src/game/sa2/: title_screen.c
src/game/special_stage/: guard_robo.c  main.c  physics.c  player.c  ui.c  utils.c
src/game/stage/: boss_results_transition.c  camera.c  intro.c  player.c  player_super_sonic.c  results.c  stage.c  ui.c
src/game/time_attack/: lobby.c  mode_select.c  results.c
src/lib/agb_flash/: agb_flash_512k.c
src/platform/win32/: opengl.c
(+248 files in other folders)
